尝试随机分配寄存器，以失败告终